--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,11 +2,98 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
   <display-name>workshop-jakartaee-khadri-mart</display-name>
   <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-    <welcome-file>default.htm</welcome-file>
+    <welcome-file>main.jsp</welcome-file>
   </welcome-file-list>
+  <servlet>
+		<servlet-name>groadd</servlet-name>
+		<servlet-class>com.khadri.mart.grosary.servlet.AddGrosaryServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>groadd</servlet-name>
+		<url-pattern>/groadd</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>addjsp</servlet-name>
+		<jsp-file>/groAdd.jsp</jsp-file>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>addjsp</servlet-name>
+		<url-pattern>/grosary_add</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>gromodify</servlet-name>
+		<servlet-class>com.khadri.mart.grosary.servlet.ModifyGrosaryServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>gromodify</servlet-name>
+		<url-pattern>/gromodify</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>modifyJsp</servlet-name>
+		<jsp-file>/groModify.jsp</jsp-file>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>modifyJsp</servlet-name>
+		<url-pattern>/grosary_modify</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>modifypageJsp</servlet-name>
+		<jsp-file>/grosary_modify_page.jsp</jsp-file>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>modifypageJsp</servlet-name>
+		<url-pattern>/grosary_modify_page</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>viewjsp</servlet-name>
+		<jsp-file>/groView.jsp</jsp-file>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>viewjsp</servlet-name>
+		<url-pattern>/grosary_view</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>viewallJsp</servlet-name>
+		<jsp-file>/groViewAll.jsp</jsp-file>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>viewallJsp</servlet-name>
+		<url-pattern>/grosary_viewAll</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>grodelete</servlet-name>
+		<servlet-class>com.khadri.mart.grosary.servlet.DeleteGrosaryServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>grodelete</servlet-name>
+		<url-pattern>/grodelete</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>deletepageJsp</servlet-name>
+		<jsp-file>/grosary_delete_page.jsp</jsp-file>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>deletepageJsp</servlet-name>
+		<url-pattern>/grosary_delete_page</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>jspDelete</servlet-name>
+		<jsp-file>/groDelete.jsp</jsp-file>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>jspDelete</servlet-name>
+		<url-pattern>/grosary_delete</url-pattern>
+	</servlet-mapping>
+	<context-param>
+		<param-name>Url</param-name>
+		<param-value>jdbc:mysql://localhost:3306/2024_batch</param-value>
+	</context-param>
+	<context-param>
+		<param-name>User</param-name>
+		<param-value>root</param-value>
+	</context-param>
+	<context-param>
+		<param-name>Password</param-name>
+		<param-value>root</param-value>
+	</context-param>
 </web-app>
